[package]
name = "hyrule-node"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Cryptography
ed25519-dalek = { version = "2.0", features = ["serde", "rand_core"] }
blake3 = "1.8"
hex = "0.4"
rand = "0.8"

# Storage
walkdir = "2.5"
flate2 = "1.1"

# Configuration
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
dirs = "5.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Base64
base64 = "0.22"

# URL encoding
urlencoding = "2.1"

# Colors for CLI
colored = "2.1"
futures = "0.3.31"

[[bin]]
name = "hyrule-node"
path = "src/main.rs"
