[package]
name = "hyrule-node"
version = "0.3.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for non-Tor calls
reqwest = { version = "0.11", features = ["json", "socks"] }

# Arti / Tor
arti-client = { version = "0.19.0", features = ["tokio", "native-tls", "onion-service-client"] }
arti-hyper = { version = "0.19.0" }  # NO onion feature here
tor-rtcompat = { version = "0.19.0", features = ["tokio", "native-tls"] }

hyper = { version = "0.14", features = ["client", "http1", "http2", "tcp"] }

tls-api = "0.9"
tls-api-native-tls = "0.9"

# Serialization, CLI, logging, etc.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
chrono = "0.4"
hex = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }
blake3 = "1"
rand = "0.8"
flate2 = "1"
walkdir = "2"
dirs = "5"
colored = "2"
bytes = "1.11.0"
futures = "0.3"
urlencoding = "2"
toml = "0.8"
base64 = "0.22.1"
axum = "0.8.7"
tower-http = { version = "0.6", features = ["trace"] }
